docs_src/98.wip/plex/plex-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plex-external-ingress
  namespace: media
  labels:
    app: plex
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - plex.yarr.wtf
    secretName: plex-certs
  rules:
  - host: plex.yarr.wtf
    http:
      paths:
      - path: /
        backend:
          serviceName: plex-tcp
          servicePort: pms
